# rackabel

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: DESIGN.md  DEVIATIONS.md  TEMPLATES.md
src/: cli.rs  context.rs  error.rs  main.rs  project.rs
src/commands/: build.rs  deploy.rs  doctor.rs  explain.rs  install.rs  mod.rs  new.rs  pack.rs  validate.rs  watch.rs
src/commands/dev/: disable.rs  enable.rs  list.rs  logs_cmd.rs  mod.rs  register.rs  reload.rs  start.rs  status.rs  stop.rs  test_cmd.rs  unregister.rs  watch_cmd.rs
src/commands/new/: answers.rs  config.rs  mod.rs  scaffold.rs
src/commands/plugin/: disable.rs  enable.rs  external.rs  install.rs  list.rs  migrate.rs  mod.rs  run.rs  search.rs  which.rs
src/dev/: daemon.rs  host.rs  ipc.rs  launch_config.rs  logs.rs  mod.rs  preflight.rs  registry.rs  resolve.rs  watch.rs
src/hooks/: discovery.rs  engine.rs  lifecycle.rs  manifest.rs  mod.rs  outcome.rs  payload.rs  run.rs
src/manifest/: infer.rs  mod.rs  pkgjson.rs  sdk_manifest.rs  state.rs
src/max/: mod.rs  patch.rs  paths.rs
src/plugin/: collision.rs  env_contract.rs  git.rs  lock.rs  manifest.rs  mod.rs  resolve.rs  sha256.rs  source.rs  store.rs  template.rs  warn_state.rs
src/services/: banner.rs  esbuild.rs  live.rs  mod.rs  native_dep.rs  node.rs  official_cli.rs  packer.rs  proc.rs  toolkit.rs  user_library.rs
src/templates/: exclude.rs  mod.rs  placeholder.rs  render.rs  update.rs
src/ui/: color.rs  frame.rs  mod.rs  prompt.rs
tests/: trycmd.rs
tests/cli/: build_dry_run.trycmd  deploy_dry_run.trycmd  dev_register_names.trycmd  dev_registry.trycmd  dev_surface.trycmd  dev_test.trycmd  doctor_no_live.trycmd  explain.trycmd  hooks_surface.trycmd  new_no_input.trycmd  new_no_toolkit.trycmd  pack_dry_run.trycmd  pack_include_guard.trycmd  plugin_surface.trycmd  templates_surface.trycmd  validate_complete.trycmd  validate_drift.trycmd  validate_incomplete.trycmd  validate_missing_changelog.trycmd
tests/cli/build_dry_run.in/: rackabel.toml
tests/cli/build_dry_run.in/src/: extension.ts
tests/cli/deploy_dry_run.in/: rackabel.toml
tests/cli/deploy_dry_run.in/src/: extension.ts
tests/cli/dev_register_names.in/dupe-a/: rackabel.toml
tests/cli/dev_register_names.in/dupe-b/: rackabel.toml
tests/cli/dev_register_names.in/verbdir/: rackabel.toml
tests/cli/dev_registry.in/my-ext/: rackabel.toml
tests/cli/hooks_surface.in/notarize-src/: rackabel-plugin.toml
tests/cli/pack_dry_run.in/: rackabel.toml
tests/cli/pack_include_guard.in/: rackabel.toml
tests/cli/validate_complete.in/: CHANGELOG.md  rackabel.toml
tests/cli/validate_drift.in/: CHANGELOG.md  rackabel.toml
tests/cli/validate_drift.in/.rackabel/: state.toml
tests/cli/validate_incomplete.in/: CHANGELOG.md  rackabel.toml
tests/cli/validate_missing_changelog.in/: rackabel.toml
tests/fakehost/: main.rs
tests/fixtures/dev-test-headless/: compile-headless.mjs  package.json  rackabel.toml  runner.mjs
tests/fixtures/dev-test-headless/src/: extension.ts
tests/fixtures/dev-test-nohraness/: rackabel.toml
tests/fixtures/dev-test-nohraness/src/: extension.ts
tests/fixtures/dev-test-vitest/: package.json  rackabel.toml  vitest-stub.mjs
tests/fixtures/dev-test-vitest/src/: extension.ts
tests/fixtures/ext-fixture/: rackabel.toml
tests/fixtures/ext-fixture/src/: extension.ts
tests/fixtures/pack-fixture/: CHANGELOG.md  rackabel.toml
tests/fixtures/pack-fixture/src/: extension.ts
tests/fixtures/toolkit/: ableton-extensions-cli-1.0.0-beta.0.tgz  ableton-extensions-sdk-1.0.0-beta.0.tgz
tests/integration/: build.rs  deploy.rs  dev.rs  dev_daemon.rs  dev_logs.rs  dev_registry.rs  dev_reload.rs  dev_test.rs  dev_watch.rs  doctor.rs  exit_codes.rs  hooks.rs  json_envelope.rs  main.rs  new.rs  pack.rs  plugin.rs  plugin_mgmt.rs  templates.rs  validate.rs
tests/integration/common/: mod.rs
