[package]
name = "rackabel"
version = "0.1.0"
edition = "2024"
description = "A CLI for building Max for Live devices and Ableton Live extensions"
repository = "https://github.com/pnomolos/rackabel"
license = "MIT"
keywords = ["ableton", "max-for-live", "m4l", "music", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
lto = true
strip = true
codegen-units = 1
