[package]
name = "rackabel"
version = "0.2.0"
edition = "2024"
description = "A CLI for building Max for Live devices and Ableton Live extensions"
repository = "https://github.com/pnomolos/rackabel"
license = "MIT"
keywords = ["ableton", "max-for-live", "m4l", "music", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
inquire = "0.7"
owo-colors = "4"
walkdir = "2"
globset = "0.4"
semver = "1"
which = "7"
plist = "1"
home = "0.5"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
trycmd = "0.15"

# The integration tests live under tests/integration/ so they can share a
# `common/` fixture module across command-owner test files. Declaring the test
# target explicitly is required for a subdirectory layout.
[[test]]
name = "integration"
path = "tests/integration/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
