[package]
name = "rackabel"
version = "0.2.0"
edition = "2024"
description = "A CLI for building Max for Live devices and Ableton Live extensions"
repository = "https://github.com/pnomolos/rackabel"
license = "MIT"
keywords = ["ableton", "max-for-live", "m4l", "music", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]
# Disable test auto-discovery so `tests/fakehost/main.rs` (the FakeHost fixture bin,
# declared as a [[bin]] below) is NOT also picked up as an integration-test target.
# The two real test targets (`integration`, `trycmd`) are declared explicitly.
autotests = false

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
inquire = "0.7"
owo-colors = "4"
walkdir = "2"
globset = "0.4"
semver = "1"
which = "7"
plist = "1"
home = "0.5"
zip = { version = "2", default-features = false, features = ["deflate"] }
# sha256 pinning for `plugin install` (plugins.lock), §5.4. A pure-Rust hash with no
# system/openssl dependency — the install/verify path hashes downloaded assets/tarballs.
sha2 = "0.10"
# Temp dirs for tier-1 templates (§5.5): the remote-clone holder and the old/new render
# scratch trees `new --update` 3-way-merges. Promoted from a dev-dependency because the
# template render/update paths use it at runtime, not only in tests.
tempfile = "3"

# Daemon mechanics (SPEC D §5): setsid/setpgid (pre_exec), killpg, and kill(pid, None)
# liveness probing. std exposes none of these portably, so the dev-host daemon/host/ipc
# modules use nix (all #[cfg(unix)]-gated; Windows gets a clean RK0307 stub — §9.3).
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "fs"] }
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
# tempfile is now a normal dependency (templates use it at runtime); tests share it.
trycmd = "0.15"

# The integration tests live under tests/integration/ so they can share a
# `common/` fixture module across command-owner test files. Declaring the test
# target explicitly is required for a subdirectory layout.
[[test]]
name = "integration"
path = "tests/integration/main.rs"

# Explicitly declared (autotests is off) so the trycmd transcript harness still runs.
[[test]]
name = "trycmd"
path = "tests/trycmd.rs"

# The hermetic stand-in for the real Extension Host (SPEC D §6). A tiny binary the
# daemon-lifecycle tests point the daemon at via the RACKABEL_HOST_CMD seam, so no test
# ever launches real Live/node. It prints the synthetic "Started: Extension Host 1.0.0"
# banner + per-extension liveness lines, then sleeps; SIGHUP re-prints the reload banner;
# SIGTERM exits 0; RK_FAKEHOST_CRASH=<ms> makes it exit non-zero after <ms> (crash-loop
# tests). Declared as a real bin (not #[cfg(test)]) so `cargo test` builds it and tests
# can resolve it by name; it is excluded from the published crate's default binaries by
# being un-referenced from main and is harmless if shipped.
[[bin]]
name = "rk-fakehost"
path = "tests/fakehost/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
